--- a/css/style.css
+++ b/css/style.css
@@ -58,20 +58,19 @@ fieldset.row .form-floating>label {
 /* cookies */
 
 .cookies-container {
-    color: #222;
+    color: rgba(0, 0, 0, 0.712);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     position: fixed;
     width: 100%;
     bottom: 2rem;
     z-index: 1000;
+    background-color: #ffff;
 }
 
 .cookies-content {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
-    background: white;
-    max-width: 520px;
-    border-radius: 5px;
-    padding: 1rem;
+    /* max-width: 520px; */
+    padding: 2rem;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr auto;
@@ -79,6 +78,18 @@ fieldset.row .form-floating>label {
     opacity: 0;
     transform: translateY(1rem);
     animation: slideUp 0.5s forwards;
+}
+
+p {
+    font-size: larger;
+    font-style: italic;
+    font-size: 160%;
+    color: rgb(160, 157, 157);
+    background-color: beige;
+}
+
+span {
+    font-size: larger;
 }
 
 @keyframes slideUp {
@@ -96,8 +107,8 @@ fieldset.row .form-floating>label {
     grid-column: 2;
     grid-row: 1/3;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: #007cf8;
-    color: white;
+    background: rgba(255, 0, 0, 0.685);
+    color: #ffff;
     cursor: pointer;
     border: none;
     border-radius: 5px;
