Alteração 'Cookies Popup'

--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,12 @@ span {
     }
 }
 
+
+/* meenu-hamburguer */
+
+
+/* footer  */
+
 .col-12.col-md-4.text-center,
 .text-decoration-none {
     font-size: large;
