--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,8 @@ b:hover {
 /* init navbar  */
 
 a.nav-link.text-white {
-    font-family: cursive;
-    font-size: 1.2rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.3rem;
     color: whitesmoke;
     text-transform: uppercase;
 }
