--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,15 @@ body {
 
 b.init {
     font-family: 'Kaushan Script';
-    transform: rotate(-5deg);
+    /* transform: rotate(-8deg); */
     font-size: 2.2rem;
     text-transform: uppercase;
     text-transform: lowercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    margin-bottom: .2rem;
 }
 
 b:hover {
@@ -26,7 +31,7 @@ b:hover {
 
 a.nav-link.text-white {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1.3rem;
+    font-size: 1rem;
     color: whitesmoke;
     text-transform: uppercase;
 }
@@ -177,3 +182,23 @@ span {
 
 
 /* the end footer  */
+
+
+/* #navbarArea {
+    height: 100% !important;
+} */
+
+
+/* #navbarArea ul {
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    height: 100% !important;
+    background-color: black;
+    width: 100%;
+}
+
+#navbarArea ul li a {
+    display: inline-block;
+    font-size: .9rem;
+} */
