--- a/css/style.css
+++ b/css/style.css
@@ -289,3 +289,28 @@ div.footer-ma {
 #form-dados-pessoais {
     font-family: roboto;
 }
+
+
+/* css valid forme  */
+
+.card {
+    box-shadow: 3px 6px 8px 3px rgba(100, 100, 100, 0.3);
+}
+
+iframe {
+    width: 100%;
+    height: 420px;
+}
+
+textarea.form-control {
+    height: 90px;
+    resize: none;
+}
+
+form,
+.alert {
+    margin-bottom: 0;
+}
+
+
+/* the end css forme  */
